--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 H1{
-  font-size:70px;
+  font-size:100px;
   text-align:center;
   
 }
 .gallery{
-  margin: 5px;
-  border: 1px soild #ccc;
-  Float: left;
-  width: 390px;
+  display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    grid-gap 1em;
 }
-.gallery img{
-  width: 100%
-    height: auto;
+.gallery{
+    display: inline-block;
+    width: 320px;
+    height: 240px;
+  margin: 1em;}
+
+.gallery{
+    float: left;
 }
