--- a/style.css
+++ b/style.css
@@ -1,20 +1,54 @@
-H1{
-  font-size:100px;
-  text-align:center;
-  
-}
-.gallery{
-  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    grid-gap 1em;
-}
-.gallery{
-    display: inline-block;
-    width: 320px;
-    height: 240px;
-  margin: 1em;}
 
-.gallery{
-    float: left;
+
+.container {
+  display: grid;
+  grid-gap: 8.0rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
+.container img {
+  max-width: 100%;
+  align-self: stretch;
+  justify-self: stretch;
+  object-fit: cover;
+}
+.portrait {
+  grid-row: auto / span 2;
+}
+.fit-left {
+  object-position: left;
+}
+.fit-right {
+  object-position: right;
+}
+
+
+/* Decoration */
+
+* {box-sizing: border-box}
+body {
+  margin: 2rem;
+  background: #fff;
+  font-family: arial, sans-serif;
+  font-size: 1.2em;
+}
+
+.container, .container > img {
+  padding: 1px;
+  color: #fff;
+}
+.container > img {
+  margin: 8px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+
+h1 {
+  font-size: 70px;
+  Letter-spacing: 10px;
+  color: #000;
+  text-align: center;
+  font-family: "Lucida Console", Courier, monospace;
+
+}
+p {text-align: center;}
